--- a/views/pirates/new.erb
+++ b/views/pirates/new.erb
@@ -1,1 +1,37 @@
+<div style="margin: 0 auto; border: 1px solid black; width: 800px; text-align: center">
+
 <h1>Make your form here</h1>
+
+<form method="POST" name="pirate_form" action="/pirates">
+
+  <p>
+    <label for="pirate"> Pirate Name: </label>
+    <input type="text" name="pirate[name]">
+    <label for=”pirate”> Pirate Weight: </label>
+    <input type="text" name="pirate[weight]">
+    <label for=”pirate”> Pirate Height: </label>
+    <input type="text" name="pirate[height]">
+  </p>
+
+  <p>
+    <label for=”ship”> Ship Name: </label>
+    <input id = "ship_name_1" type="text" name="pirate[ships][][name]">
+    <label for=”ship”> Ship Type: </label>
+    <input id = "ship_type_1" type="text" name="pirate[ships][][type]">
+    <label for=”ship”> Ship Booty: </label>
+    <input id = "ship_booty_1" type="text" name="pirate[ships][][booty]">
+  </p>
+
+  <p>
+    <label for=”ship”> Ship Name: </label>
+    <input id = "ship_name_2" type="text" name="pirate[ships][][name]">
+    <label for=”ship”> Ship Type: </label>
+    <input id = "ship_type_2"type="text" name="pirate[ships][][type]">
+    <label for=”ship”> Ship Booty: </label>
+    <input id = "ship_booty_2"type="text" name="pirate[ships][][booty]">
+  </p>
+
+  <input type="submit" value="Submit">
+
+</form>
+</div>
